user authentication and errors handling
