# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,23 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
+
+class AuthenticateUserController {
+    async handle(request: Request, response: Response): Promise<Response> {
+        const { email, password } = request.body;
+
+        const authenticateUserUseCase = container.resolve(
+            AuthenticateUserUseCase
+        );
+
+        const token = authenticateUserUseCase.execute({
+            email,
+            password,
+        });
+
+        return response.json(token);
+    }
+}
+
+export { AuthenticateUserController };
